# Local-Search

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  SKILL.md
.agent-docs/: .gitignore
benchmarks/: README.md  hosted-search-2026-07-21.md  hosted_search.py
scripts/: SKILL.md  local-search-cleanup.sh  run-agent-docs.ts
site/: DESIGN.md  components.json  package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  page.tsx
site/components/: agent-playground-interactive.tsx  agent-playground-loader.tsx  agent-playground.tsx  brainless.css  brand-logo.tsx  copy-command.tsx  icons.tsx
site/components/brainless/blocks/: codex-session.tsx
site/components/brainless/claude/: claude-thinking.tsx
site/components/brainless/codex/: codex-working.tsx
site/lib/: traces.ts
src/: SKILL.md  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
src/browser/: SKILL.md  cdp.rs  discovery.rs  mod.rs  scripts.rs
src/commands/: mod.rs
tests/: cli.rs
