[package]
name = "local-search"
version = "0.1.1"
edition = "2024"
autobins = false
description = "Free structured web search for agents through a local browser"
license = "MIT"
repository = "https://github.com/Kevin-Liu-01/local-search"
homepage = "https://github.com/Kevin-Liu-01/local-search"
readme = "README.md"
keywords = ["search", "browser", "agents", "cdp", "scraping"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "lsearch"
path = "src/bin/lsearch.rs"

[[bin]]
name = "local-search"
path = "src/bin/local-search.rs"

[[bin]]
name = "local-browser"
path = "src/bin/local-browser.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = "0.3.32"
http = "1.4.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"
unsafe-code = "forbid"

[lints.clippy]
all = { level = "deny", priority = 10 }
perf = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }
